# opengl_ros

./: CMakeLists.txt  README.md  package.xml
scripts/: install_opencv.sh
src/: cv_gl_ros.cpp
